WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228247
REGRESSION (
r279751
): WebContent process often crashes when hovering over content on apple.com
https://bugs.webkit.org/show_bug.cgi?id=228247
Summary
REGRESSION (r279751): WebContent process often crashes when hovering over con...
Wenson Hsieh
Reported
2021-07-23 14:19:51 PDT
rdar://81010093
Attachments
Fixes the crash
(9.62 KB, patch)
2021-07-23 14:32 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-07-23 14:32:58 PDT
Created
attachment 434124
[details]
Fixes the crash
Wenson Hsieh
Comment 2
2021-07-23 15:48:05 PDT
Comment on
attachment 434124
[details]
Fixes the crash Thanks for the review!
EWS
Comment 3
2021-07-23 16:21:33 PDT
Committed
r280271
(
239933@main
): <
https://commits.webkit.org/239933@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434124
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug